Updated index.html part2

--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <html>
 
+  
+<head>
+<style>
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
+th, td {
+  border-bottom: 1px solid #ddd;
+}
+tr:hover {background-color: coral;}
+  
+</style>
+</head>
+  
 <title>Warsztat programisty laboratorium</title>
 
 <body>
 <h1>Header1</h1>
   <p>Paragraph 1</p>
 <h2>Useful links</h2>
-  <a href="https://www.google.pl/">Google</a>
-  <a href="https://weather.com/">Weather</a>
-  <a href="https://ug.edu.pl/">University of Gdansk</a>
+  <a href="https://www.google.pl/">Google</a><br>
+  <a href="https://weather.com/">Weather</a><br>
+  <a href="https://ug.edu.pl/">University of Gdansk</a><br>
 
 <h3>F1</h3>
 <table>
