--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ img {
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 5px;
-  width: 150px;
+  height: 200px;
+  width: auto;
 }
 th, td {
   border-bottom: 1px solid #ddd;
